k8s/spack/builds-spack-io/deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: builds-spack-io
  namespace: spack
  labels:
    app: builds-spack-io
    svc: web
spec:
  selector:
    matchLabels:
      app: builds-spack-io
      svc: web
  replicas: 2
  template:
    metadata:
      labels:
        app: builds-spack-io
        svc: web
    spec:
      containers:

      - name: web

        # https://github.com/spack/spack-monitor/pkgs/container/spack-monitor
        image: "ghcr.io/spack/spack-monitor:c4e629a4"
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 3031
      nodeSelector:
        spack.io/node-pool: base
