k8s/spack/builds-spack-io/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: builds-spack-io
  namespace: spack
  labels:
    app: builds-spack-io
    svc: web
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 3031
  - name: https
    port: 443
    targetPort: 3031
  selector:
    app: builds-spack-io
    svc: web
