k8s/spack/builds-spack-io/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: builds-spack-io
  namespace: spack
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10024M"
    nginx.ingress.kubernetes.io/client-body-buffer-size: "10024M"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
spec:
  tls:
  - secretName: tls-spackbuilds
  rules:
  - host: builds.spack.io
    http:
      paths:
      - backend:
          serviceName: builds-spack-io
          servicePort: 80         
      - path: /static
        backend:
          serviceName: static-service
          servicePort: 80
      - path: /images
        backend:
          serviceName: images-services
          servicePort: 80
